Chapter05/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
    name: http
  - port: 443
    targetPort: 1443
    name: https
  selector:
    app: kubia
